--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
   --black: #1f2128;
   --white: #ffffff;
   --morado: #1f152b;
+  --celeste:#0081C3;
+  --celest-claro: #00ACD8;
 }
 * {
   box-sizing: border-box;
@@ -28,7 +30,9 @@ body {
 section {
   width: 100%;
   height: 100%;
-  background-color: #1f152b;
+  /* background-color: #1f152b;  */
+
+  
   padding: 4rem 0;
 }
 
@@ -57,9 +61,10 @@ img {
 }
 .btn {
   padding: 25px 15px;
-  border-radius: 50px;
-  background: linear-gradient(62deg, #2600fc 0%, #ff00ea 100%);
-  color: #fff;
+  border-radius: 35.5px;
+  background: var(--3, #FFF);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: var(--2, #0081C3);
   text-align: center;
   font-family: var(--i-regular);
   font-size: 17px;
@@ -88,11 +93,9 @@ img {
     font-weight: 700;
     font-size: 64px;
     line-height: 64px;
+    color: var(--2, #0081C3);
     .gradient-text {
-      background: linear-gradient(71deg, #2600fc 0%, #ff00ea 100%);
-      -webkit-background-clip: text;
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
+      color: var(--2, #0081C3);
       font-weight: 700;
       font-size: 64px;
       line-height: 64px;
@@ -100,7 +103,7 @@ img {
     }
 
     .white {
-      color: white;
+      color: var(--2, #0081C3);
     }
   }
   p {
@@ -108,7 +111,7 @@ img {
   }
 }
 p {
-  color: #b7b4bb;
+  color: var(--1, #00ACD8);
   font-family: var(--i-regular);
   font-size: 19px;
   font-style: normal;
@@ -117,7 +120,8 @@ p {
 }
 
 .header {
-  background-color: #1f152b;
+  background: #FFF;
+  box-shadow: 0px 2.846px 2.846px 0px rgba(0, 129, 195, 0.25);
   position: fixed;
   left: 0;
   top: 0;
@@ -137,6 +141,12 @@ p {
       font-weight: 800;
       line-height: normal;
       flex: 0.5;
+      width: 150px;
+      height: 100px;
+      img{
+        height: 100%;
+        object-fit: contain;
+      }
     }
     .menu {
       flex: 1;
@@ -147,7 +157,7 @@ p {
         gap: 4rem;
         li {
           a {
-            color: #fff;
+            color: #00ACD8;
 
             font-family: var(--i-regular);
             font-size: 19px;
@@ -164,17 +174,21 @@ p {
 
 .hero {
   margin-top: 5rem;
-  background-color: #1f152b;
+  background-color: transparent;
+  background-image: url(/assets/vg.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   .contenedor {
     justify-content: space-between;
     align-items: center;
-
+    
     .left {
       flex: 1;
       .textos {
         gap: 2rem;
         h1 {
-          color: #fff;
+          color: var(--2, #0081C3);
           font-family: var(--i-regular);
           font-size: 72px;
           font-style: normal;
@@ -182,7 +196,7 @@ p {
           line-height: 72px; /* 100% */
         }
         p {
-          color: #b7b4bb;
+          color: var(--1, #00ACD8);
           font-family: var(--i-regular);
           font-size: 22px;
           text-align: start;
@@ -204,7 +218,8 @@ p {
   align-items: center;
   gap: 4rem;
   padding: 2rem 0;
-  background-color: #1f152b;
+  background: linear-gradient(180deg, #00ACD8 0%, #0081C3 100%);
+
   .contenedor {
     display: flex;
     justify-content: center;
@@ -218,46 +233,20 @@ p {
   }
 }
 .what-is {
+  background-color: white;
   .contenedor {
     padding: 2rem 0;
     border-radius: 20px;
-    background-image: url(../assets/bg-brow.webp);
+    /* background-image: url(../assets/bg-brow.webp); */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
-    min-height: 350px;
+    /* min-height: 350px; */
     gap: 1rem;
     align-items: start;
     justify-content: start;
-    .textos {
-      width: 50%;
-      justify-content: start;
-      h2 {
-        text-align: start;
-        font-family: var(--i-regular);
-        font-weight: 700;
-        font-size: 64px;
-        line-height: 64px;
-        .gradient-text {
-          background: linear-gradient(71deg, #2600fc 0%, #ff00ea 100%);
-          -webkit-background-clip: text;
-          background-clip: text;
-          -webkit-text-fill-color: transparent;
-          font-weight: 700;
-          font-size: 64px;
-          line-height: 64px;
-          font-family: Inter, sans-serif;
-        }
-
-        .white {
-          color: white;
-        }
-      }
-      p {
-        text-align: start;
-      }
-    }
+    
   }
 }
 .how {
@@ -265,7 +254,7 @@ p {
     gap: 2rem;
     align-items: center;
     gap: 5rem;
- 
+
     .benefits {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -275,14 +264,15 @@ p {
         min-height: 350px;
         padding: 49px 33px 48.99px 33px;
         gap: 2rem;
-        border-radius: 24px;
-        border: 1px solid rgba(232, 232, 232, 0.25);
+        border-radius: 20px;
+        border: 2px solid var(--1, #00ACD8);
+        background: rgba(0, 172, 216, 0.20);
         .benefit {
           display: flex;
           flex-direction: column;
           gap: 2rem;
           h3 {
-            color: #fff;
+            color: var(--1, #00ACD8);
             font-family: var(--i-regular);
             font-size: 28px;
             font-style: normal;
@@ -290,14 +280,146 @@ p {
             line-height: 30.8px;
           }
         }
-          &:nth-child(even){
-            position: relative;
-            top: 4rem;
-          }
+        &:nth-child(even) {
+          position: relative;
+          top: 4rem;
+        }
       }
     }
-    .svg{
+    .svg {
       padding-top: 2rem;
+    }
+  }
+}
+.team {
+  .contenedor {
+    gap: 2rem;
+    .textos {
+      gap: 1rem;
+      p {
+        text-align: center;
+      }
+    }
+    #miCarrusel {
+      .splide__track {
+        .splide__list {
+          .splide__slide {
+            .card {
+              display: flex;
+              flex-direction: column;
+              gap: 1rem;
+              .img {
+                img {
+                  border-radius: 15px;
+                }
+              }
+              .textos {
+                align-items: center;
+                justify-content: center;
+                h3 {
+                  color: #fff;
+                  text-align: center;
+                  font-family: var(--i-regular);
+                  font-size: 28px;
+                  font-style: normal;
+                  font-weight: 700;
+                  line-height: 28px; /* 100% */
+                }
+                p {
+                  font-size: 15px;
+                  font-style: normal;
+                  font-weight: 400;
+                  line-height: 24px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+.roadmap {
+
+  background: var(--1, rgba(0, 172, 216, .1));
+  .contenedor {
+    gap: 2rem;
+    .grid-roadmap {
+      display: flex;
+      gap: 1rem;
+      .box {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 49px 33px 48.99px 33px;
+        border-radius: 32px;
+        border: 1px solid rgba(131, 131, 131, 0.25);
+        .header-step {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          .step {
+            font-family: var(--i-regular);
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 16px; /* 100% */
+            text-transform: uppercase;
+            background: linear-gradient(66deg, #2600fc 0%, #ff00ea 100%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+          }
+          .percentaje {
+            display: flex;
+            width: 50px;
+            transform: rotate(16deg);
+            padding: 4.751px 14.84px 3.954px 16.151px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 25px;
+            background: linear-gradient(25deg, #2600fc 0%, #ff00ea 100%);
+            color: #fff;
+            font-family: var(--i-regular);
+            font-size: 27px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 24.3px;
+            strong {
+              font-size: 18px;
+            }
+          }
+        }
+        h3 {
+          color: #000;
+          font-family: var(--i-regular);
+          font-size: 32px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 32px;
+        }
+        ul {
+          display: flex;
+          flex-direction: column;
+          li {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: var(--1, #00ACD8);
+            font-family: var(--i-regular);
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 25.2px;
+            svg {
+              width: 20px;
+              height: 20px;
+            }
+          }
+        }
+      }
     }
   }
 }
