--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
   --black: #1f2128;
   --white: #ffffff;
   --morado: #1f152b;
-  --celeste:#0081C3;
-  --celest-claro: #00ACD8;
+  --celeste: #0081c3;
+  --celest-claro: #00acd8;
 }
 * {
   box-sizing: border-box;
@@ -32,7 +32,6 @@ section {
   height: 100%;
   /* background-color: #1f152b;  */
 
-  
   padding: 4rem 0;
 }
 
@@ -62,9 +61,9 @@ img {
 .btn {
   padding: 25px 15px;
   border-radius: 35.5px;
-  background: var(--3, #FFF);
+  background: var(--3, #fff);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  color: var(--2, #0081C3);
+  color: var(--2, #0081c3);
   text-align: center;
   font-family: var(--i-regular);
   font-size: 17px;
@@ -93,9 +92,9 @@ img {
     font-weight: 700;
     font-size: 64px;
     line-height: 64px;
-    color: var(--2, #0081C3);
+    color: var(--2, #0081c3);
     .gradient-text {
-      color: var(--2, #0081C3);
+      color: var(--2, #0081c3);
       font-weight: 700;
       font-size: 64px;
       line-height: 64px;
@@ -103,7 +102,7 @@ img {
     }
 
     .white {
-      color: var(--2, #0081C3);
+      color: var(--2, #0081c3);
     }
   }
   p {
@@ -111,7 +110,7 @@ img {
   }
 }
 p {
-  color: var(--1, #00ACD8);
+  color: var(--1, #00acd8);
   font-family: var(--i-regular);
   font-size: 19px;
   font-style: normal;
@@ -120,7 +119,7 @@ p {
 }
 
 .header {
-  background: #FFF;
+  background: #fff;
   box-shadow: 0px 2.846px 2.846px 0px rgba(0, 129, 195, 0.25);
   position: fixed;
   left: 0;
@@ -143,7 +142,7 @@ p {
       flex: 0.5;
       width: 150px;
       height: 100px;
-      img{
+      img {
         height: 100%;
         object-fit: contain;
       }
@@ -157,7 +156,7 @@ p {
         gap: 4rem;
         li {
           a {
-            color: #00ACD8;
+            color: #00acd8;
 
             font-family: var(--i-regular);
             font-size: 19px;
@@ -182,13 +181,13 @@ p {
   .contenedor {
     justify-content: space-between;
     align-items: center;
-    
+
     .left {
       flex: 1;
       .textos {
         gap: 2rem;
         h1 {
-          color: var(--2, #0081C3);
+          color: var(--2, #0081c3);
           font-family: var(--i-regular);
           font-size: 72px;
           font-style: normal;
@@ -196,7 +195,7 @@ p {
           line-height: 72px; /* 100% */
         }
         p {
-          color: var(--1, #00ACD8);
+          color: var(--1, #00acd8);
           font-family: var(--i-regular);
           font-size: 22px;
           text-align: start;
@@ -218,7 +217,7 @@ p {
   align-items: center;
   gap: 4rem;
   padding: 2rem 0;
-  background: linear-gradient(180deg, #00ACD8 0%, #0081C3 100%);
+  background: linear-gradient(180deg, #00acd8 0%, #0081c3 100%);
 
   .contenedor {
     display: flex;
@@ -246,7 +245,6 @@ p {
     gap: 1rem;
     align-items: start;
     justify-content: start;
-    
   }
 }
 .how {
@@ -265,14 +263,14 @@ p {
         padding: 49px 33px 48.99px 33px;
         gap: 2rem;
         border-radius: 20px;
-        border: 2px solid var(--1, #00ACD8);
-        background: rgba(0, 172, 216, 0.20);
+        border: 2px solid var(--1, #00acd8);
+        background: rgba(0, 172, 216, 0.2);
         .benefit {
           display: flex;
           flex-direction: column;
           gap: 2rem;
           h3 {
-            color: var(--1, #00ACD8);
+            color: var(--1, #00acd8);
             font-family: var(--i-regular);
             font-size: 28px;
             font-style: normal;
@@ -340,8 +338,7 @@ p {
   }
 }
 .roadmap {
-
-  background: var(--1, rgba(0, 172, 216, .1));
+  background: var(--1, rgba(0, 172, 216, 0.1));
   .contenedor {
     gap: 2rem;
     .grid-roadmap {
@@ -407,7 +404,7 @@ p {
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            color: var(--1, #00ACD8);
+            color: var(--1, #00acd8);
             font-family: var(--i-regular);
             font-size: 16px;
             font-style: normal;
@@ -417,6 +414,79 @@ p {
               width: 20px;
               height: 20px;
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+.questions {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  h2 {
+    text-align: center;
+    font-family: var(--i-regular);
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 64px;
+    color: var(--2, #0081c3);
+  }
+  .contenedor {
+    max-width: 600px;
+    .accordion {
+      border-radius: 8px;
+      overflow: hidden;
+      border: 1px solid #ddd;
+
+      .accordion-item {
+        border-bottom: 1px solid #ddd;
+
+        .accordion-header {
+          width: 100%;
+          padding: 15px;
+          background: #f8f8f8;
+          border: none;
+  
+          cursor: pointer;
+          outline: none;
+          transition: background 0.3s;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          color: #0f051d;
+          font-family: var(--i-regular);
+          font-size: 21px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 26.4px;
+
+          &:hover {
+            background: #eaeaea;
+          }
+
+          &::after {
+            content: "▼";
+            font-size: 14px;
+            color: var(--1, #00acd8);
+            transition: transform 0.3s ease;
+          }
+        }
+
+        .accordion-content {
+          padding: 15px;
+          display: none;
+          background: white;
+        }
+
+        &.active {
+          .accordion-content {
+            display: block;
+          }
+
+          .accordion-header::after {
+            transform: rotate(180deg);
           }
         }
       }
